--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,10 @@ div {
   text-align: center;
 }
 
+div.result {
+  display: block;
+}
+
 #reminderSlideShowDiv {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/backgroundimg.jpg");
   background-position: center;
@@ -62,14 +66,6 @@ h2, h4 {
   float: left;
 }
 
-legend {
-  margin-bottom: 24px;
-  margin-left: 10px;
-  text-align: left !important;
-  color: #1b1b1b !important;
-  font-size: 24px;
-}
-
 form {
   display: inline-block !important;
   width: 100%;
@@ -83,62 +79,10 @@ form {
   border-radius: 4px;
 }
 
-#artist {
-  margin-bottom: 23px !important;
-}
-
-#songInfo {
-  display: block !important;
-}
-
-#songInfo.hideSI {
-  display: none !important;
-}
-
-.btn-danger {
-  background-color: var(--primary-color);
-}
-
-#submitRequest {
-  color: white !important;
-  font-weight: bold;
-  font-size: 18px;
-  border: none;
-  border-radius: 4px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  width: 100%;
-  margin-top: 24px;
-  display: block !important;
-}
-#submitRequest:not([disabled]):hover {
-  background-color: #f54a43 !important;
-}
-
-#submitRequest.hideB {
-  display: none !important;
-}
-
-#submitRequestLoading {
-  background-color: rgba(220, 53, 69, 0.65) !important;
-  color: white !important;
-  font-weight: bold;
-  font-size: 18px;
-  border: none;
-  border-radius: 4px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  width: 100%;
-  margin-top: 24px;
-  display: none !important;
-}
-
-#submitRequestLoading.showB {
-  display: block !important;
-}
-
-#thank-you-message.show {
-  display: block !important;
+legend {
+  text-align: left !important;
+  color: #1b1b1b !important;
+  font-size: 24px !important;
 }
 
 p {
@@ -147,4 +91,8 @@ p {
 
 img {
   margin-bottom: 15px;
+}
+
+#dropdown {
+  list-style: none;
 }/*# sourceMappingURL=styles.css.map */
